Add models.py with quick prediction functions

--- a/src/Notebooks/4_Modeling/3.1_XGBoost_Pipeline.ipynb
+++ b/src/Notebooks/4_Modeling/3.1_XGBoost_Pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "1.0         7368    7368    7368    7368          7368     7368"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +337,259 @@
        "Name: Label_Pred, Length: 7368, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_m['Label_Pred']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data_Hora</th>\n",
+       "      <th>Mes</th>\n",
+       "      <th>Dia</th>\n",
+       "      <th>Local</th>\n",
+       "      <th>Precipitacao</th>\n",
+       "      <th>PrecSumOld</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>PrecSum</th>\n",
+       "      <th>Label_Pred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>816</th>\n",
+       "      <td>2011-01-07 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.800000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744</th>\n",
+       "      <td>2011-01-07 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>24.500000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>817</th>\n",
+       "      <td>2011-01-07 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.800000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>745</th>\n",
+       "      <td>2011-01-07 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>24.500000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818</th>\n",
+       "      <td>2011-01-07 02:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.800000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372743</th>\n",
+       "      <td>2019-07-04 23:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.200000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-07-04</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372767</th>\n",
+       "      <td>2019-07-04 23:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.032433</td>\n",
+       "      <td>61.376086</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-07-04</td>\n",
+       "      <td>61.376086</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372791</th>\n",
+       "      <td>2019-07-04 23:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>59.500000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-07-04</td>\n",
+       "      <td>59.500000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372839</th>\n",
+       "      <td>2019-07-04 23:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.600000</td>\n",
+       "      <td>57.200000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-07-04</td>\n",
+       "      <td>57.200000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372815</th>\n",
+       "      <td>2019-07-04 23:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>62.800000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-07-04</td>\n",
+       "      <td>62.800000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7368 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Data_Hora  Mes  Dia  Local  Precipitacao  PrecSumOld  Label  \\\n",
+       "816    2011-01-07 00:00:00    1    7      1      0.000000   18.800000    1.0   \n",
+       "744    2011-01-07 00:00:00    1    7      2      0.000000   24.500000    1.0   \n",
+       "817    2011-01-07 01:00:00    1    7      1      0.000000   18.800000    1.0   \n",
+       "745    2011-01-07 01:00:00    1    7      2      0.000000   24.500000    1.0   \n",
+       "818    2011-01-07 02:00:00    1    7      1      0.000000   18.800000    1.0   \n",
+       "...                    ...  ...  ...    ...           ...         ...    ...   \n",
+       "372743 2019-07-04 23:00:00    7    4      1      2.200000   64.000000    1.0   \n",
+       "372767 2019-07-04 23:00:00    7    4      2      2.032433   61.376086    1.0   \n",
+       "372791 2019-07-04 23:00:00    7    4      3      1.800000   59.500000    1.0   \n",
+       "372839 2019-07-04 23:00:00    7    4      4      2.600000   57.200000    1.0   \n",
+       "372815 2019-07-04 23:00:00    7    4      5      1.600000   62.800000    1.0   \n",
+       "\n",
+       "              Data    PrecSum  Label_Pred  \n",
+       "816     2011-01-07   0.000000           0  \n",
+       "744     2011-01-07   0.000000           0  \n",
+       "817     2011-01-07   0.000000           0  \n",
+       "745     2011-01-07   0.000000           0  \n",
+       "818     2011-01-07   0.000000           0  \n",
+       "...            ...        ...         ...  \n",
+       "372743  2019-07-04  64.000000           1  \n",
+       "372767  2019-07-04  61.376086           1  \n",
+       "372791  2019-07-04  59.500000           1  \n",
+       "372839  2019-07-04  57.200000           1  \n",
+       "372815  2019-07-04  62.800000           1  \n",
+       "\n",
+       "[7368 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mes', 'Dia', 'Local', 'Precipitacao', 'PrecSum']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_res['Features']"
    ]
   },
   {
