--- a/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
+++ b/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geocoding_API_key = 'AIzaSyDQSlkM_H09KtEaLgbqOwrWYeXvuJL1vA4'\n",
+    "geocoding_API_key = ''\n",
     "gmaps_geo = googlemaps.Client(key=geocoding_API_key) # Geocoding API"
    ]
   },
