--- a/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
+++ b/src/Notebooks/1_Clean/Get LAT_LNG - Enchentes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID1</th>\n",
+       "      <th>ID2</th>\n",
+       "      <th>Hora</th>\n",
+       "      <th>Endereco1</th>\n",
+       "      <th>Endereco2</th>\n",
+       "      <th>Comentario1</th>\n",
+       "      <th>Comentario2</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>003.578/2.010</td>\n",
+       "      <td>19:53:42</td>\n",
+       "      <td>AVN  MAURICIO DE MEDEIROS - ASS. MARG. GUARARÁ...</td>\n",
+       "      <td>JD IRENE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Encerrada</td>\n",
+       "      <td>07/01/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>003.579/2.010</td>\n",
+       "      <td>19:57:47</td>\n",
+       "      <td>AVN  MAURICIO DE MEDEIROS - ASS. MARG. GUARARÁ...</td>\n",
+       "      <td>JD IRENE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RG - 40490344-7</td>\n",
+       "      <td>Encerrada</td>\n",
+       "      <td>07/01/2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID1            ID2      Hora  \\\n",
+       "0  NaN  003.578/2.010  19:53:42   \n",
+       "1  NaN  003.579/2.010  19:57:47   \n",
+       "\n",
+       "                                           Endereco1 Endereco2 Comentario1  \\\n",
+       "0  AVN  MAURICIO DE MEDEIROS - ASS. MARG. GUARARÁ...  JD IRENE         NaN   \n",
+       "1  AVN  MAURICIO DE MEDEIROS - ASS. MARG. GUARARÁ...  JD IRENE         NaN   \n",
+       "\n",
+       "       Comentario2     Status        Data  \n",
+       "0              NaN  Encerrada  07/01/2010  \n",
+       "1  RG - 40490344-7  Encerrada  07/01/2010  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enchentes = pd.read_csv('../../../data/cleandata/Ordens de serviço/Enchentes - 01012010 a 30092019.csv',\n",
     "                        sep = ';')\n",
@@ -24,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1389/ 1390"
+     ]
+    }
+   ],
    "source": [
     "from sys import stdout\n",
     "for index, row in enchentes.iterrows():\n",
@@ -126,9 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status 0: 1385\n",
+      "status 1: 5\n",
+      "status 2: 0\n",
+      "status 3: 0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4):\n",
     "    len_ = len(backup[backup['status'] == i])\n",
@@ -144,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +254,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -186,5 +285,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
